[package]
name = "aloxide"
version = "0.0.3"
edition = "2018"
authors = ["Nikolai Vazquez"]
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/nvzqz/aloxide"
repository = "https://github.com/nvzqz/aloxide"
documentation = "https://docs.rs/aloxide"
description = """
A helper tool for Cargo build scripts (build.rs) for compiling and/or linking to
a given Ruby library version for use in Rust code.
"""
keywords = ["build-dependencies", "ruby"]
categories = ["development-tools::build-utils"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[dependencies]
bzip2 = { version = "0.3", optional = true }
cc = "1"
dirs = "1"
memchr = "2"
tar = { version = "0.4", optional = true }
walkdir = "2"

[dependencies.ureq]
version = "0.9"
default-features = false
features = ["tls"]
optional = true

[features]
default = ["download"]
archive = ["bzip2", "tar"]
download = ["archive", "ureq"]
