[package]
name = "aloxide"
version = "0.0.8"
edition = "2018"
authors = ["Nikolai Vazquez"]
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/nvzqz/aloxide"
repository = "https://github.com/nvzqz/aloxide"
documentation = "https://docs.rs/aloxide"
description = """
A helper tool for Cargo build scripts (build.rs) for compiling and/or linking to
a given Ruby library version for use in Rust code.
"""
keywords = ["build-dependencies", "ruby"]
categories = ["development-tools::build-utils"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[dependencies]
bzip2 = { version = "0.3", optional = true }
dirs = { version = "1", optional = true }
memchr = { version = "2", optional = true }
tar = { version = "0.4", optional = true }

[dependencies.ureq]
version = "0.9"
default-features = false
features = ["tls"]
optional = true

[target.'cfg(target_os = "windows")'.dependencies]
# Used for `windows_registry`
cc = "1"

[features]
default = ["download", "memchr"]
archive = ["bzip2", "tar"]
download = ["archive", "ureq", "dirs"]

[package.metadata.docs.rs]
all-features = true
